# widgetmancer

./: .gitignore  Cargo.toml  README.md  bacon.toml  edit_with_limited_memory.bash  edit_with_limited_memory.sh  flake.nix  get_test_summary.sh  graph_missing_reqs.bash  prepare-commit-msg  run_all_tests.sh  shell.nix  tmux-workspace.sh  view_first_errors.bash
crates/angles/: Cargo.toml  README.md
crates/angles/src/: float_angle.rs  lib.rs  normalized_ortho_angle.rs  ortho_angle.rs  quarter_turn_rotatable.rs
crates/coordinates/: Cargo.toml  README.md
crates/coordinates/src/: coordinate.rs  direction.rs  float_coordinate.rs  int_coordinate.rs  king_direction.rs  king_world_step.rs  lib.rs  orthogonal_direction.rs  quarter_turn_rotatable.rs  signed_coordinate.rs  signed_int_coordinate.rs  unsigned_coordinate.rs
crates/coordinates/src/coordinates/: coordinate.rs  int_coordinate.rs  unsigned_coordinate.rs
crates/game/: Cargo.toml
crates/game/src/: animations.rs  fov_stuff.rs  game.rs  glyph.rs  graphics.rs  inputmap.rs  lib.rs  main.rs  piece.rs  portal_geometry.rs  utility.rs  utils_for_tests.rs
crates/game/src/animations/: burst_explosion_animation.rs  circle_attack_animation.rs  floaty_laser.rs  piece_death_animation.rs  radial_shockwave.rs  recoiling_board.rs  selector_animation.rs  simple_laser.rs  smite_from_above.rs
crates/game/src/fov_stuff/: fence.rs  partial_square_visibility_from_unbound_polygon.rs  square_visibility.rs
crates/game/src/glyph/: angled_blocks.rs  braille.rs  hextant_blocks.rs
crates/game/src/graphics/: animations.rs  drawable.rs
crates/game/src/graphics/animations/: blink_animation.rs  burst_explosion_animation.rs  circle_attack_animation.rs  floaty_laser.rs  (+8 more)
crates/game/src/utility/: interval.rs  non_zero_sign.rs  sign.rs  to_and_from_array.rs  trait_alias_macro.rs  units.rs
crates/game/test_data/: 1_portal_playground__tests__test_drag_mouse_good_frame.txt  2_portal_playground__tests__test_drag_mouse_good_frame.txt  3_portal_playground__tests__test_drag_mouse_good_frame.txt  _portal_playground__tests__test_click_a_good_frame.txt  _portal_playground__tests__test_click_a_small_good_frame.txt  _portal_playground__tests__test_click_b_good_frame.txt  _portal_playground__tests__test_render_part_of_square_with_rotation_good_frame.txt  _portal_playground__tests__test_render_portal_edges_good_frame.txt  _portal_playground__tests__test_render_smoothed_mouse_linear_move_good_frame.txt  _portal_playground__tests__test_render_smoothed_mouse_stationary_good_frame.txt  arcavg_dist_portal_playground__tests__test_smoothed_mouse_motion_accuracy_good_value.txt  arcmax_dist_portal_playground__tests__test_smoothed_mouse_motion_accuracy_min_value.txt  colorless_portal_playground__tests__test_click_a_good_frame.txt  horiz_fastavg_dist_portal_playground__tests__test_smoothed_mouse_motion_accuracy_min_value.txt  horizavg_dist_portal_playground__tests__test_smoothed_mouse_motion_accuracy_min_value.txt  horizmax_dist_portal_playground__tests__test_smoothed_mouse_motion_accuracy_good_value.txt  red_map_portal_playground__tests__test_click_b_good_frame.txt  sinavg_dist_portal_playground__tests__test_smoothed_mouse_motion_accuracy_good_value.txt  sinmax_dist_portal_playground__tests__test_smoothed_mouse_motion_accuracy_good_value.txt  sinmax_dist_portal_playground__tests__test_smoothed_mouse_motion_accuracy_min_value.txt
crates/game/test_data/portal_playground__tests__test_big_screen_small_world_click/: a.txt
crates/game/test_data/portal_playground__tests__test_big_screen_small_world_simple/: a.txt
crates/game/test_data/portal_playground__tests__test_click_a/: a.txt
crates/game/test_data/portal_playground__tests__test_click_a_small/: a.txt
crates/game/test_data/portal_playground__tests__test_click_b/: a.txt
crates/game/test_data/portal_playground__tests__test_drag_mouse/: 1.txt  2.txt  3.txt
crates/game/test_data/portal_playground__tests__test_portal_with_rotation/: a.txt
crates/game/test_data/portal_playground__tests__test_render_one_line_of_sight_portal/: a.txt
crates/game/test_data/portal_playground__tests__test_render_part_of_square_with_rotation/: a.txt
crates/game/test_data/portal_playground__tests__test_render_portal_edges/: a.txt
crates/game/test_data/portal_playground__tests__test_render_smoothed_mouse_linear_move/: a.txt
crates/game/test_data/portal_playground__tests__test_render_smoothed_mouse_stationary/: a.txt
crates/game/test_data/portal_playground__tests__test_render_with_center_offset/: a.txt
crates/game/test_data/portal_playground__tests__test_smoothed_mouse_motion_accuracy/: arc_dists.txt  diag_avg_dist.txt  diag_dists.txt  horiz_dists.txt  horiz_fast_dists.txt  horiz_max_dist.txt  sin_dists.txt
crates/game/tests/: integration_tests.rs
crates/misc_utilitites/: Cargo.toml  README.md
crates/misc_utilitites/src/: abs_that_works_with_unsigned.rs  bool_with_partial.rs  euclid_zero_one_traits.rs  general_utility.rs  lib.rs  min_max_that_work_with_partial_ord.rs  trait_alias_macro.rs
crates/poses/: Cargo.toml
crates/poses/src/: README.md  lib.rs  orthogonal_facing_int_pose.rs  rigid_transform.rs  rigidly_transformable.rs  square_with_king_direction.rs  square_with_orthogonal_direction.rs
crates/shapes/: Cargo.toml
crates/shapes/src/: lib.rs
crates/shapes/src/shapes/: directed_line.rs  grid_square_face.rs  mod.rs  two_different_points.rs
crates/terminal_rendering/: Cargo.toml  README.md
crates/terminal_rendering/src/: angled_blocks.rs  braille.rs  drawable_glyph.rs  floating_square.rs  frame.rs  glyph.rs  glyph_constants.rs  glyph_with_transparency.rs  lib.rs  screen.rs
crates/terminal_rendering/src/glyph/: angled_blocks.rs  braille.rs  floating_square.rs  glyph_constants.rs  hextant_blocks.rs
crates/terminal_rendering/test_data/terminal_rendering__tests__test_signed_bargraph/: a.txt
crates/terminal_rendering/test_data/terminal_rendering__tests__test_val_to_column/: a.txt
crates/utility/: Cargo.toml
crates/utility/src/: angle_interval.rs  coordinate_frame_conversions.rs  geometry2.rs  lib.rs
(+218 files in other folders)
