[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# local
misc_utilities = { path = "./crates/misc_utilitites", version = "0.0.0"}

# non-local
approx = "0.5.1"
derive_more = "0.99.17"
dyn-clone = "1.0.9"
enum-as-inner = "0.6.0"
euclid = "0.22.7"
line_drawing = "1.0"
ntest = "0.9.0"
num = "0.4"
num-traits = "0.2"
ordered-float = "3.3.0"
rand = "0.8.4"
rgb = "0.8.34"
strum = "0.25.0"
strum_macros = "0.25.1"
termion = "2.0.1"
priority-queue = "1.2.3"
itertools = "0.11.0"
shrinkwraprs = "0.3.0"
getset = "0.1.2"
ambassador = "0.3.5"
color-backtrace = { version = "0.6" }
static_assertions = "1.1.0"
typenum = "1.17.0"
paste = "1.0.14"
try-partialord = "0.1.3"
map-macro = "0.3.0"
derive-getters = "0.3.0"
automod = "1.0.14"

[workspace.dev-dependencies]
pretty_assertions = "1.3.0"
