[workspace]
members = ["crates/*"]
# exclude = ["crates/game", "crates/shapes"]
resolver = "3"

[workspace.package]
name = "rust_roguelike"
version = "0.1.0"
edition = "2021"

# [workspace.dependencies]
# local                                                                              
utilities = { path = "./crates/utility", version = "0.0.0" }
# angles = { path = "./crates/angles", version = "0.0.0" }
# coordinates = { path = "./crates/coordinates", version = "0.0.0" }



