[package]
name = "angles"
version = "0.0.0"
edition.workspace = true

[dependencies]
angular-units.workspace = true
automod.workspace = true
derive_more.workspace = true
itertools.workspace = true
misc_utilities.workspace = true
more-asserts.workspace = true
ntest.workspace = true
num.workspace = true
ordered-float.workspace = true
rand.workspace = true

