[package]
name = "coordinates"
version = "0.0.0"
edition.workspace = true

[dependencies]
#internal
misc_utilities.workspace = true
angles.workspace = true

#external
angular-units.workspace = true
automod.workspace = true
derive_more.workspace = true
num.workspace = true
# static_assertions = "1.1.0"
# line_drawing = "1.0"
# euclid = "0.22.7"
