[package]
name = "coordinates"
version = "0.0.0"
edition.workspace = true

[dependencies]
#internal
misc_utilities.workspace = true
angles.workspace = true

#external
angular-units.workspace = true
automod.workspace = true
derive_more.workspace = true
num.workspace = true
ordered-float.workspace = true
itertools.workspace = true
geo.workspace = true
map-macro.workspace = true
rand.workspace = true
static_assertions.workspace = true
ntest.workspace = true
pretty_assertions.workspace = true
# line_drawing = "1.0"
# euclid = "0.22.7"
