[package]
name = "game"
version = "0.0.0"
edition.workspace = true

[dependencies]
# external
approx = "0.5.1"
derive_more = "0.99.17"
device_query = "1.1.1"
dyn-clone = "1.0.9"
enum-as-inner = "0.5.1"
euclid = "0.22.7"
line_drawing = "1.0"
ntest = "0.9.0"
num = "0.4"
ordered-float = "3.3.0"
rand = "0.8.4"
rgb = "0.8.34"
strum = "0.24"
strum_macros = "0.24"
termion = "2.0.1"
priority-queue = "1.2.3"
itertools = "0.10.5"
unordered-pair = "0.2.4"
shrinkwraprs = "0.3.0"
getset = "0.1.2"
backtrace-on-stack-overflow = "0.3.0"
ambassador = "0.3.5"


utility.workspace = true
terminal_rendering.workspace = true


[dev-dependencies]
pretty_assertions = "1.3.0"
