[package]
name = "shapes"
version = "0.0.0"
edition.workspace = true

[dependencies]
# internal
misc_utilities.workspace = true
poses.workspace = true
coordinates.workspace = true

# external
automod.workspace = true
static_assertions.workspace = true
line_drawing.workspace = true
euclid.workspace = true


