[package]
name = "terminal-rendering"
version = "0.0.0"
edition.workspace = true

[dependencies]
num = "0.4"
rgb = "0.8.34"
euclid = "0.22.7"
ordered-float = "3.3.0"
line_drawing = "1.0"
termion = "2.0.1"
ntest = "0.9.0"
itertools = "0.10.5"

utility.workspace = true

[dev-dependencies]
pretty_assertions = "1.3.0"
