[package]
name = "terminal_rendering"
version = "0.0.0"
edition.workspace = true

[dependencies]
num = "0.4"
rgb = "0.8.34"
euclid = "0.22.7"
ordered-float = "3.3.0"
line_drawing = "1.0"
termion = "2.0.1"
ntest = "0.9.0"
itertools = "0.10.5"

utility.workspace = true
regex = "1.11.1"
fancy-regex = "0.15.0"
regex_static = "0.1.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
