[package]
name = "utility"
version = "0.0.0"
edition.workspace = true

[dependencies]
approx = "0.5.1"
derive_more = "0.99.17"
num = "0.4"
itertools = "0.10.5"
line_drawing = "1.0"
getset = "0.1.2"
ntest = "0.9.0"
rgb = "0.8.34"
euclid = "0.22.7"
# termion = "2.0.1"
rand = "0.8.4"
ordered-float = "3.3.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
